# seekthermaltemp

./: CMakeLists.txt  README.md  license  package.xml
scripts/: calibration.py  regresion.yaml  siar_temps.py  statistics.py
txt/: cal23.8.txt  cal24.0.txt  cal24.1.txt  cal26.2.txt  cal32.5.txt  cal34.8.txt  cal39.8.txt  cal40.4.txt  cal40.7.txt  cal41.4.txt  cal42.9.txt  cal43.3.txt  cal44.5.txt  cal45.0.txt  cal46.7.txt  cal47.0.txt  cal49.0.txt  cal49.3.txt  cal49.txt  cal50.1.txt  cal51.4.txt  cal52.7.txt  cal55.6.txt  cal56.1.txt  cal57.1.txt  cal58.0.txt  cal58.5.txt  cal59.8.txt  cal61.3.txt  cal72.0.txt
